--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -2,7 +2,7 @@ FROM php:7.4-cli-buster
 
 COPY . /app
 WORKDIR /app
-RUN apt-get update && apt-get install -y wget \
+RUN apt-get update && apt-get install -y wget git zip \
     && .docker/composer-install.sh \
     && composer -vvv install \
     && vendor/bin/phpunit
